# docs/swagger.json
@@ -55,6 +55,9 @@
                 "security": [
                     {
                         "BearerAuth": []
+                    },
+                    {
+                        "BearerAuth": []
                     }
                 ],
                 "description": "Uploads a video file to S3 and prepares it for machine learning prediction",
@@ -69,6 +72,13 @@
                 ],
                 "summary": "Upload a video for prediction",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer {token}",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "file",
                         "description": "Video file to upload",
